# template-python-project

./: .editorconfig  .gitignore  CONTRIBUTING.md  Makefile  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: docs.yml  lints.yml  tests.yml
data/: README.md
models/: README.md
notebooks/: template_notebook.ipynb
